--- a/views/customer-bookings.ejs
+++ b/views/customer-bookings.ejs
@@ -11,7 +11,7 @@
   <!ELEMENT customer (name)>
   <!ELEMENT booking (class_name, trainer, class_day, class_times)>
   <!ELEMENT class_name (#PCDATA)>
-  <!ELEMENT trainer (name)>
+  <!ELEMENT trainer (namez)>
   <!ELEMENT class_details (class_day, class_times)>
   <!ELEMENT class_day (#PCDATA)>
   <!ELEMENT class_times (start_time, end_time)>
