--- a/views/trainer-bookings.ejs
+++ b/views/trainer-bookings.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE class_bookings [<!ELEMENT class_bookings (class_details, bookings)>
-<!ELEMENT class_details (name, trainer, day, start_time, end_time)>
-<!ELEMENT name (#PCDATA)>
+<!ELEMENT class_details (class_name, trainer, day, start_time, end_time)>
+<!ELEMENT class_name (#PCDATA)>
 <!ELEMENT trainer (#PCDATA)>
 <!ELEMENT day (#PCDATA)>
 <!ELEMENT start_time (#PCDATA)>
