--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE users [<!ELEMENT users (user*)>
+<!ELEMENT user (user_id, name, username, role)>
 <!ELEMENT name (firstname, lastname)>
 <!ELEMENT user_id (#PCDATA)>
 <!ELEMENT username (#PCDATA)>
